OP-1810: Fix My Apps expansion spacing issue.

--- a/web-app/themes/common/stylesheets/variables/_dashboardSwitcher.scss
+++ b/web-app/themes/common/stylesheets/variables/_dashboardSwitcher.scss
@@ -23,9 +23,22 @@ $dashboard-switcher-opacity: 0.90 !default;
 
 $dashboard-item-body-radius: 5px !default;
 
-$dashboard-switcher-slider-width: ($dashboard-width + $dashboard-margin-right + $dashboard-margin-left) * $dashboard-columns;
-$dashboard-switcher-slider-height: ($dashboard-height + $dashboard-margin-bottom + $dashboard-padding-top) * $dashboard-rows;
-$dashboard-switcher-slider-expanded-height: $dashboard-switcher-slider-height + $dashboard-mini-slider-height + 45px;
+$dashboard-switcher-slider-height-extra: 40px;
+$dashboard-switcher-slider-expanded-height-extra: 45px;
+
+$dashboard-switcher-slider-width: 
+	($dashboard-width + $dashboard-margin-right + $dashboard-margin-left) * 
+	$dashboard-columns;
+
+$dashboard-switcher-slider-height: 
+	(($dashboard-height + $dashboard-margin-bottom + $dashboard-padding-top) * $dashboard-rows) +
+	$dashboard-switcher-slider-height-extra;
+
+$dashboard-switcher-slider-expanded-height: 
+	$dashboard-switcher-slider-height + 
+	$dashboard-mini-slider-height + 
+	$dashboard-switcher-slider-expanded-height-extra;
+
 $dashboard-switcher-slider-min-height: $dashboard-switcher-slider-height;
 $dashboard-switcher-slider-max-height: $dashboard-switcher-slider-expanded-height;
 
